tests/compile_fail/store_type_not_send_nor_sync.rs
use michie::memoized;
use std::collections::HashMap;
use std::rc::Rc;

#[memoized(key_expr = (), store_type = HashMap<(), Rc<()>>)]
fn f() -> Rc<()> {
    Rc::new(())
}

fn main() {}
